# CVToolkit

./: .pre-commit-config.yaml  README.md  pyproject.toml
CVToolkit/database/: database_handler.py
CVToolkit/settings/: settings_helper.py
cvtoolkit/converters/: azure_coco_to_yolo_converter.py
cvtoolkit/database/: baas_tables.py  database_handler.py
cvtoolkit/datasets/: yolo_labels_dataset.py
cvtoolkit/helpers/: data_structure_helpers.py  file_helpers.py
cvtoolkit/metrics/: total_blurred_area.py
cvtoolkit/settings/: settings_helper.py
tests/: test_yolo_labels_dataset.py
tests/data/labels/: a.txt  b.txt
