[tool.poetry]
name = "CVToolkit"
version = "0.1.0"
description = "CVToolkit is a collection of essential utilities for computer vision team projects, enhancing reusability and boosting productivity across multiple projects."
authors = [
    "Sebastian Davrieux <s.davrieux@amsterdam.nl>",
    "Diana Epureanu <d.epureanu@amsterdam.nl>",
    "Andrea Lombardo <a.lombardo@amsterdam.nl>"
]

[tool.poetry.dependencies]
python = "~3.8"
pre-commit = {version = "^3.2.0", source = "PyPI"}
SQLAlchemy = {version = "^2.0.25", source = "PyPI"}
opencensus-ext-azure = "^1.1.13"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
