[tool.poetry]
name = "cvtoolkit"
version = "2.0.3"
description = "CVToolkit is a collection of essential utilities for computer vision team projects, enhancing reusability and boosting productivity across multiple projects."
authors = [
    "Sebastian Davrieux <s.davrieux@amsterdam.nl>",
    "Diana Epureanu <d.epureanu@amsterdam.nl>",
    "Andrea Lombardo <a.lombardo@amsterdam.nl>",
    "Daan Bloembergen <d.bloembergen@amsterdam.nl>"
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = {version = "^1.24.2", source = "PyPI"}
opencensus-ext-azure = {version = "^1.1.13", source = "PyPI"}
pre-commit = {version = "^3.2.0", source = "PyPI"}
pydantic = {version = "^1.8.2", source = "PyPI"}
SQLAlchemy = {version = "1.4.50", source = "PyPI"}
torch = {version = "2.2.2", source = "PyPI"}

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
